# ONTrack-rs

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  Gemfile  LICENSE.md  flake.nix
.cargo/: config.toml
crates/ontrack-core/: Cargo.toml
crates/ontrack-core/src/: config.rs  exporter.rs  geocoder.rs  lib.rs  matrix.rs  parser.rs  solver.rs  voice.rs
crates/ontrack-core/tests/: exporter.rs  parser.rs  solver.rs
crates/ontrack-desktop/: Cargo.toml
crates/ontrack-desktop/src/: app.rs  main.rs
crates/ontrack-desktop/src/views/: home.rs  mod.rs  results.rs  settings.rs
crates/ontrack-mobile/: Cargo.toml  build.rs
crates/ontrack-mobile/android/: build.gradle.kts  local.properties  settings.gradle.kts
crates/ontrack-mobile/android/app/: build.gradle.kts  proguard-rules.pro
crates/ontrack-mobile/android/app/src/main/: AndroidManifest.xml
crates/ontrack-mobile/android/app/src/main/res/values/: colors.xml  strings.xml
crates/ontrack-mobile/src/: controller.rs  gps.rs  lib.rs  preview_main.rs
crates/ontrack-mobile/ui/: app.slint
docs/: PLAY_STORE.md  PRIVACY_POLICY.md
fastlane/: Appfile  Fastfile  INIT.md  README.md  report.xml
scripts/: acli.sh  build-android-release.sh  build-android.sh  build-desktop.sh  emulate.sh  geny.sh  pic.sh  sign.sh  test.sh
