
[workspace]
resolver = "2"
members = [
    "crates/ontrack-core",
    "crates/ontrack-desktop",
    "crates/ontrack-mobile",
]

[workspace.package]
version     = "2.0.0"
edition     = "2021"
authors     = ["Matt Porter <matt@aflabs.io>"]
license     = "AGPL-3.0"
repository  = "https://github.com/qompassai/ONTrack-rs"
description = "TDS Telecom field route optimizer — Rust implementation"

[workspace.dependencies]

tokio       = { version = "1",    features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
csv         = "1"
calamine    = "0.30"        # XLSX/XLS reader (replaces pandas for parser)

anyhow      = "1"
thiserror   = "1"

url         = "2"
urlencoding = "2"
dotenvy     = "0.15"
log         = "0.4"
env_logger  = "0.11"

eframe      = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui        = "0.30"
egui_extras = { version = "0.30", features = ["all_loaders"] }
rfd         = "0.15"        # native file picker

slint       = { version = "1.9",  default-features = false, features = ["compat-1-2", "renderer-skia", "backend-android-activity-06"] }
slint-build = "1.9"

android_logger    = "0.14"
android-activity  = { version = "0.6", features = ["native-activity"] }
jni               = "0.21"
ndk-context       = "0.1"

cpal        = "0.15"
hound       = "3"
whisper-rs  = "0.13"

[profile.release]
debug         = true       # full DWARF; required for native-debug-symbols.zip
strip         = false      # do NOT strip - we strip manually for the AAB only
lto           = "thin"     # smaller binary, faster startup
codegen-units = 1          # better optimization, also better symbols
panic         = "abort"    # smaller binary; Android can't unwind across JNI anyway
opt-level     = 3
